--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET = "vicheaaaa"
 ADMIN_EMAIL = "admin@gmail.com"
-ADMIN_PASSWORD = "vicheae10"
+ADMIN_PASSWORD = "admine10"
 
 MONGODB_URI = "mongodb+srv://vicheaaaa:Project%23SES1@cluster0.7kp35.mongodb.net"
 
