--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ STRIPE_SECRET_KEY = "sk_test_51QAin7C6r7uBtwY7jIqsyALe4h7ZtaaDnT1v0Q30jScSm3sioF
 RAZORPAY_KEY_SECRET = "U7CBloFhoQUYeBc3TsOBMcp8"
 RAZORPAY_KEY_ID = "rzp_test_sg_mbOk0is9HHI9iU"
 
-CHAT_ID= "7555606082"
-BOT_TOKEN = "7555606082:AAF0XPSCTD4LfopJP95Lyz9KN_Lsjn6XkiI"
-=======
+CHAT_ID= "-1002385564259"
+BOT_TOKEN = "7992439201:AAEtGLMJloiOtGGkk1IBk8gr5W6ECIqB3pg"
+
 RAZORPAY_KEY_SECRET = "HYRICXN3B4PXyTkrImiaivGx"
 RAZORPAY_KEY_ID = "rzp_test_sg_trvIqcikrcTdh3"
